<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/submit_entry"
        android:layout_marginBottom="16dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearlayout1"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/name_entry"
                    android:id="@+id/textView"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_entry"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:maxLength="25" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearlayout2"
                android:layout_below="@+id/linearlayout1"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code_entry"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/code_entry"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:maxLength="10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearlayout3"
                android:layout_below="@+id/linearlayout2"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_entry"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_entry"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:maxLength="120" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearlayout4"
                android:layout_below="@+id/linearlayout3"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_entry"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_entry"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linearlayout5"
                android:layout_below="@+id/linearlayout4"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/line_entry"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_entry"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="32dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/photo_entry_linearlayout"
                android:layout_below="@+id/linearlayout5"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/photo_entry"
                    android:layout_centerHorizontal="true"
                    android:text="@string/photo_entry" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/photo_entry_result" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location_entry_linearlayout"
                android:layout_below="@+id/photo_entry_linearlayout"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location_entry"
                    android:text="@string/location_entry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="No location"
                    android:id="@+id/location_entry_result" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_entry"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/submit_entry"/>

</RelativeLayout>